# ai-helper

./: README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  lib.rs  main.rs
