[package]
name = "audiodg"
version = "0.1.0"
description = "Audio Device Graph"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "audiodg_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.5"
winapi = { version = "0.3", features = ["winuser", "dwmapi", "uxtheme"] }
cpal = "0.15"
base64 = "0.21"
hound = "3.5"
bytemuck = { version = "1.14", features = ["derive"] }
screenshots = "0.3"
image = "0.25"

